# imu_ws

./: .gitignore  .gitmodules
src/encoder_imu_ekf_ros-master/: CMakeLists.txt
src/encoder_imu_ekf_ros-master/results/: evo.sh  fast_lio_odom_2023-06-06-15-09-07.bag  fast_lio_odom_2023-06-06-15-09-57.bag  odom_fast_lio_2023-06-05-14-31-55.bag  odom_lio_sam_2023-06-05-14-54-43.bag  readme
src/encoder_imu_ekf_ros-master/results/2023-06-16-19-14-28.bag/: current_pose.tum  ndt_pose.tum  wheel_odom_pose.tum
src/encoder_imu_ekf_ros-master/results/compare1/: fast_lio_odom.tum  wheel_odom_ekf_imu_angular_2023-06-06-15-59-27.bag  wheel_odom_gpw.tum  wheel_odom_zhen.tum  wheel_odom_zhen_imu_angular.tum  wheel_odom_zhen_only_cncoder_2023-06-06-15-57-12.bag  wheel_odom_zhen_only_encoder.tum
src/encoder_imu_ekf_ros-master/results/compare5/: fast_lio_odom.tum  odom_lio_sam_mapping_odometry.tum
src/encoder_imu_ekf_ros-master/scripts/: aided_nav.py  test.py
src/imu_ekf-master/config/: estimation_params.yaml
src/zhen_imu_driver/: CMakeLists.txt  package.xml
src/zhen_imu_driver/launch/: imu_driver.launch
src/zhen_imu_driver/msg/: angular_vel.msg  eul.msg  linear_acc.msg
src/zhen_imu_driver/src/: imu_data_decode.cpp  imu_data_repub.cpp  imu_node.cpp  packet.cpp  showpath.cpp
src/zr_msgs/: CMakeLists.txt  package.xml
src/zr_msgs/msg/: AvoidData.msg  EV_params.msg  LED.msg  Point_id.msg  arrive.msg  battery_info.msg  cabin.msg  cabin_status.msg  clean_motor.msg  clean_motor_pub.msg  delivery_cancel.msg  delivery_status.msg  driving_status.msg  error_code.msg  external_action.msg  goal_info.msg  gps_anchor.msg  gps_anchor_array.msg  imu_date.msg  lift_status.msg  locker_info.msg  mission.msg  motor_info.msg  motor_stream.msg  occupancy_rate.msg  order_info.msg  patrol_info.msg  patrol_target.msg  robot_monitor.msg  robot_status.msg  single_operation.msg  task.msg  task_status.msg
src/zr_msgs/srv/: AccessControl.srv  AccessControl_bac.srv  DeviceKey.srv  DeviceStatus.srv  DoorControl.srv  Register.srv  capture_panorama.srv  patrol_task.srv  take_elevator.srv
